TCH-bin: add binutils-gdb-0233-check-ld and binutils-gdb-0233-check-binutils
Signed-off-by: Guan Xuetao <gxt@pku.edu.cn>

--- a/TCH-binutils-gdb/Makefile.binutils-gdb-0233
+++ b/TCH-binutils-gdb/Makefile.binutils-gdb-0233
@@ -154,9 +154,17 @@ binutils-gdb-0233-highfive:
 	@echo "5. Install binutils-gdb complete."
 	@echo "BUILD binutils-gdb-0233 DONE!"
 
-binutils-gdb-0233-check: # ln put before make because FAIL not solved
-	@ln --symbolic --force -t $(BINUTILS_GDB_0233_BUILD) $(BINUTILS_GDB_0233_BUILD)/gas/testsuite/gas.sum
+binutils-gdb-0233-check-gas:
 	@make -C $(BINUTILS_GDB_0233_BUILD) check-gas		1>> $(BINUTILS_GDB_0233_LOG_STDOUT) 2>> $(BINUTILS_GDB_0233_LOG_STDERR)
+	@ln --symbolic --force -t $(BINUTILS_GDB_0233_BUILD) $(BINUTILS_GDB_0233_BUILD)/gas/testsuite/gas.sum
+
+binutils-gdb-0233-check-ld:
+	@make -C $(BINUTILS_GDB_0233_BUILD) check-binutils	1>> $(BINUTILS_GDB_0233_LOG_STDOUT) 2>> $(BINUTILS_GDB_0233_LOG_STDERR)
+	@ln --symbolic --force -t $(BINUTILS_GDB_0233_BUILD) $(BINUTILS_GDB_0233_BUILD)/binutils/binutils.sum
+
+binutils-gdb-0233-check-binutils:
+	@make -C $(BINUTILS_GDB_0233_BUILD) check-ld		1>> $(BINUTILS_GDB_0233_LOG_STDOUT) 2>> $(BINUTILS_GDB_0233_LOG_STDERR)
+	@ln --symbolic --force -t $(BINUTILS_GDB_0233_BUILD) $(BINUTILS_GDB_0233_BUILD)/ld/ld.sum
 
 binutils-gdb-0233-TAGS:
 	@make -C $(BINUTILS_GDB_0233_BUILD) -j8 TAGS		1>> $(BINUTILS_GDB_0233_LOG_STDOUT) 2>> $(BINUTILS_GDB_0233_LOG_STDERR)
