--- a/TCH-gcc/Makefile.gcc-0903
+++ b/TCH-gcc/Makefile.gcc-0903
@@ -8,6 +8,7 @@ GCC_0903_TARGET		:= dadao-linux-elf
 
 GCC_0903_NEWFILES	:= $(DIR_DADAO)/TCH-gcc/gcc-0903-newfiles
 GCC_0903_PATCHES	:= $(DIR_DADAO)/TCH-gcc/gcc-0903-patches
+GCC_0903_FIXUP		:= $(DIR_DADAO)/TCH-gcc/gcc-0903-fixup
 
 GCC_0903_SOURCE		:= $(DIR_DADAO_SOURCE)/gcc-0903
 GCC_0903_BUILD		:= $(DIR_DADAO_BUILD)/gcc-0903
@@ -64,6 +65,9 @@ gcc-0903-source:
 		autoreconf;						\
 		git add .;						\
 		git commit -sm"DADAO: re-generate root configure"
+	# fixups
+	@echo "FIXUP: Apply fixup ..."
+	@cd $(GCC_0903_SOURCE); git am $(GCC_0903_FIXUP)/*.patch
 
 gcc-0903-build-new:
 	@rm -fr $(GCC_0903_BUILD)
