--- a/TCH-binutils-gdb/Makefile.binutils-gdb-0233
+++ b/TCH-binutils-gdb/Makefile.binutils-gdb-0233
@@ -10,6 +10,7 @@ BINUTILS_GDB_0233_NEWFILES		:= $(DIR_DADAO)/TCH-binutils-gdb/binutils-gdb-0233-n
 BINUTILS_GDB_0233_PATCHES		:= $(DIR_DADAO)/TCH-binutils-gdb/binutils-gdb-0233-patches
 
 BINUTILS_GDB_0233_SOURCE		:= $(DIR_DADAO_SOURCE)/binutils-gdb-0233
+BINUTILS_GDB_0233_OPCODES		:= $(BINUTILS_GDB_0233_SOURCE)/opcodes/dadao-insn.opc
 BINUTILS_GDB_0233_BUILD			:= $(DIR_DADAO_BUILD)/binutils-gdb-0233
 BINUTILS_GDB_0233_INSTALL		?= $(DIR_DADAO_INSTALL)
 #BINUTILS_GDB_0233_INSTALL		?= $(DIR_DADAO_BUILD)/__binutils-gdb-0233
@@ -95,6 +96,8 @@ binutils-gdb-0233-source:
 	# opcodes
 	@echo "OPCODES: Copy opcodes dir"
 	@cp -a $(BINUTILS_GDB_0233_NEWFILES)/opcodes/* $(BINUTILS_GDB_0233_SOURCE)/opcodes/
+	@echo "OPCODES: Generate dadao opcodes file"
+	@make OPCODES_TARGET=$(BINUTILS_GDB_0233_OPCODES) -C $(DIR_DADAO_OPCODES) opcodes-binutils
 	@cd $(BINUTILS_GDB_0233_SOURCE);				\
 		git add opcodes;					\
 		git commit -sm"DADAO-opcodes: add dadao support"
