TCH-gcc: add -Wno-format options
Signed-off-by: Guan Xuetao <gxt@pku.edu.cn>

--- a/TCH-gcc/Makefile.gcc-0903
+++ b/TCH-gcc/Makefile.gcc-0903
@@ -72,7 +72,11 @@ gcc-0903-source:
 gcc-0903-build-new:
 	@rm -fr $(GCC_0903_BUILD)
 	@mkdir -p $(GCC_0903_BUILD)
+	# FIXME: add -Wno-format to remove a heap of compiling warnings
 	@cd $(GCC_0903_BUILD) &&					\
+		CFLAGS="-Wno-format -g -O2"				\
+		CPPFLAGS="-Wno-format -g -O2"				\
+		CXXFLAGS="-Wno-format -g -O2"				\
 		$(GCC_0903_SOURCE)/configure				\
 			--target=$(GCC_0903_TARGET)			\
 			--srcdir=$(GCC_0903_SOURCE)			\
