Makefile: change DIR_DADAO to DIR_DADAO_TOP
Signed-off-by: Guan Xuetao <gxt@pku.edu.cn>

--- a/ENV-linux/Makefile.linux-0503
+++ b/ENV-linux/Makefile.linux-0503
@@ -7,8 +7,8 @@ LINUX_0503_ARCH		:= dadao
 LINUX_0503_BRANCH	:= dadao-0503
 LINUX_0503_DEFCONFIG	:= dadao_defconfig
 
-LINUX_0503_NEWFILES	:= $(DIR_DADAO)/ENV-linux/linux-0503-newfiles
-LINUX_0503_PATCHES	:= $(DIR_DADAO)/ENV-linux/linux-0503-patches
+LINUX_0503_NEWFILES	:= $(DIR_DADAO_TOP)/ENV-linux/linux-0503-newfiles
+LINUX_0503_PATCHES	:= $(DIR_DADAO_TOP)/ENV-linux/linux-0503-patches
 
 LINUX_0503_SOURCE	:= $(DIR_DADAO_SOURCE)/linux-0503
 LINUX_0503_BUILD	:= $(DIR_DADAO_BUILD)/linux-0503
