DADAO-opcodes: add decodetree handling
Signed-off-by: Guan Xuetao <gxt@pku.edu.cn>

--- a/DADAO-opcodes/Makefile
+++ b/DADAO-opcodes/Makefile
@@ -8,3 +8,11 @@ all:
 
 opcodes-binutils:
 	$(M4) gen-opcodes-binutils.m4	> $(OPCODES_TARGET)
+
+PYTHON		:= /usr/bin/python
+# copy from qemu-0401/scripts/decodetree.py
+DECODETREE	?= decodetree-0401.py
+TARGET_DIR	?= $(shell pwd)
+
+decode-dadao.inc.c: dadao.decode $(DECODETREE)
+	$(PYTHON) $(DECODETREE) --decode disas_dadao -o $(TARGET_DIR)/$@ $<
