--- a/DADAO-opcodes/Makefile
+++ b/DADAO-opcodes/Makefile
@@ -9,10 +9,10 @@ all:
 opcodes-binutils:
 	$(M4) gen-opcodes-binutils.m4	> $(OPCODES_TARGET)
 
-PYTHON		:= /usr/bin/python
+PYTHON			:= /usr/bin/python
 # copy from qemu-0401/scripts/decodetree.py
-DECODETREE	?= decodetree-0401.py
-TARGET_DIR	?= $(shell pwd)
+DECODETREE		?= decodetree-0401.py
+TARGET_DECODE_QEMU	?= $(shell pwd)/decode-dadao.inc.c
 
-decode-dadao.inc.c: dadao.decode $(DECODETREE)
-	$(PYTHON) $(DECODETREE) --decode disas_dadao -o $(TARGET_DIR)/$@ $<
+decode-qemu: dadao.decode $(DECODETREE)
+	$(PYTHON) $(DECODETREE) --decode disas_dadao -o $(TARGET_DECODE_QEMU) $<
