--- a/SIM-qemu/Makefile.qemu-0401
+++ b/SIM-qemu/Makefile.qemu-0401
@@ -10,6 +10,7 @@ QEMU_0401_NEWFILES	:= $(DIR_DADAO_TOP)/SIM-qemu/qemu-0401-newfiles
 QEMU_0401_PATCHES	:= $(DIR_DADAO_TOP)/SIM-qemu/qemu-0401-patches
 
 QEMU_0401_SOURCE	:= $(DIR_DADAO_SOURCE)/qemu-0401
+QEMU_0401_DECODE	:= $(QEMU_0401_SOURCE)/target/dadao/decode-dadao.inc.c
 QEMU_0401_BUILD		:= $(DIR_DADAO_BUILD)/qemu-0401
 QEMU_0401_INSTALL	?= $(DIR_DADAO_INSTALL)
 #QEMU_0401_INSTALL	?= $(DIR_DADAO_BUILD)/__qemu-0401
@@ -46,6 +47,8 @@ qemu-0401-source:
 	# target
 	@echo "TARGET: Copy target/dadao dir"
 	@cp -a $(QEMU_0401_NEWFILES)/target/* $(QEMU_0401_SOURCE)/target/
+	@echo "TARGET-DECODE: Generate dadao decodetree file"
+	@make TARGET_DECODE_QEMU=$(QEMU_0401_DECODE) -C $(DIR_DADAO_OPCODES) decode-qemu
 	@cd $(QEMU_0401_SOURCE);					\
 		git add target/dadao;					\
 		git commit -sm"DADAO-target: add dadao support"
