--- a/TCH-gcc/Makefile.gcc-0903
+++ b/TCH-gcc/Makefile.gcc-0903
@@ -34,40 +34,31 @@ gcc-0903-source:
 	@git clone $(GCC_0903_ORIGIN) -- $(GCC_0903_SOURCE)
 	@cd $(GCC_0903_SOURCE); git checkout -b $(GCC_0903_BRANCH) $(GCC_0903_VERSION)
 	# gcc/config
-	@echo "GCC-CONFIG: Copy gcc/config/dadao dir"
 	@cp -a $(GCC_0903_NEWFILES)/gcc/config/* $(GCC_0903_SOURCE)/gcc/config/
 	@cd $(GCC_0903_SOURCE);						\
 		git add gcc/config/dadao;				\
-		git commit -sm"DADAO-gcc-config: add dadao support"
+		git commit -sm"DADAO: add gcc/config/dadao support"
 	# gcc/common/config
-	@echo "GCC-COMMON: Copy gcc/common/config/dadao dir"
 	@cp -a $(GCC_0903_NEWFILES)/gcc/common/config/* $(GCC_0903_SOURCE)/gcc/common/config/
 	@cd $(GCC_0903_SOURCE);						\
 		git add gcc/common/config/dadao;			\
-		git commit -sm"DADAO-gcc-common-config: add dadao support"
-	# gcc config
-	@echo "GCC-CONFIG: Apply gcc-config related patches ..."
+		git commit -sm"DADAO: add gcc/common/config/dadao support"
+	# gcc dir patches
 	@cd $(GCC_0903_SOURCE); git am $(GCC_0903_PATCHES)/1*.patch
 	# libgcc/config
-	@echo "LIBGCC-CONFIG: Copy libgcc/config/dadao dir"
 	@cp -a $(GCC_0903_NEWFILES)/libgcc/config/* $(GCC_0903_SOURCE)/libgcc/config/
 	@cd $(GCC_0903_SOURCE);						\
 		git add libgcc/config/dadao;				\
-		git commit -sm"DADAO-libgcc-config: add dadao support"
-	# libgcc config
-	@echo "LIBGCC-CONFIG: Apply libgcc-config related patches ..."
+		git commit -sm"DADAO: add libgcc/config/dadao support"
+	# libgcc dir patches
 	@cd $(GCC_0903_SOURCE); git am $(GCC_0903_PATCHES)/2*.patch
 	# root config
-	@echo "CONFIG: Apply config related patches ..."
 	@cd $(GCC_0903_SOURCE); git am $(GCC_0903_PATCHES)/9*.patch
-	@echo "CONFIG: re-generate configure and Makefile.in in root dir"
+	# re-generate configure and Makefile.in in root dir
 	@cd $(GCC_0903_SOURCE);						\
-		autoreconf;						\
+		$(AUTORECONF);						\
 		git add .;						\
 		git commit -sm"DADAO: re-generate root configure"
-	# fixups
-	#@echo "FIXUP: Apply fixup ..."
-	#@cd $(GCC_0903_SOURCE); git am $(GCC_0903_FIXUP)/*.patch
 
 gcc-0903-build-new:
 	@rm -fr $(GCC_0903_BUILD)
