--- a/OBSOLETE/Makefile.gcc-0902
+++ b/OBSOLETE/Makefile.gcc-0902
@@ -1,7 +1,7 @@
 #
 # Makefile for gcc in toolchain
 #
-GCC_0902_ORIGIN		:= $(DIR_TAO_GIT)/gcc.git
+GCC_0902_ORIGIN		:= $(DIR_GIT_ORIGIN)/gcc.git
 GCC_0902_VERSION	:= releases/gcc-9.2.0
 GCC_0902_BRANCH		:= dadao-0902
 GCC_0902_TARGET		:= dadao-linux-elf
