--- a/DADAO-opcodes/Makefile
+++ b/DADAO-opcodes/Makefile
@@ -9,9 +9,9 @@ all:
 opcodes-binutils:
 	$(M4) gen-opcodes-binutils.m4	> $(OPCODES_TARGET)
 
-PYTHON			:= /usr/bin/python
-# copy from qemu-0401/scripts/decodetree.py
-DECODETREE		?= decodetree-0401.py
+PYTHON			:= /usr/bin/python3
+# copy from qemu-0600/scripts/decodetree.py
+DECODETREE		?= decodetree-0600.py
 TARGET_DECODE_QEMU	?= $(shell pwd)/decode-dadao.inc.c
 
 decode-qemu: dadao.decode $(DECODETREE)
